// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`listReducer add element to list 1`] = `
Array [
  Object {
    "data": Object {
      "description": "",
      "id": "some-id-1",
      "list": Array [
        Object {
          "book": Object {
            "pid": "pid1",
          },
        },
      ],
      "title": "some list 1",
      "type": "CUSTOM_LIST",
    },
    "links": Object {
      "self": "/v1/lists/some-id-1",
    },
  },
]
`;

exports[`listReducer add element to list twice - no duplicates allowed 1`] = `
Array [
  Object {
    "data": Object {
      "description": "",
      "id": "some-id-1",
      "list": Array [
        Object {
          "book": Object {
            "pid": "pid1",
          },
          "description": "some-description-1",
        },
      ],
      "title": "some list 1",
      "type": "CUSTOM_LIST",
    },
    "links": Object {
      "self": "/v1/lists/some-id-1",
    },
  },
]
`;

exports[`listReducer add lists 1`] = `
Array [
  Object {
    "data": Object {
      "description": "a description 1",
      "id": "some-id-1",
      "list": Array [],
      "title": "some list 1",
      "type": "CUSTOM_LIST",
    },
    "links": Object {
      "self": "/v1/lists/some-id-1",
    },
  },
  Object {
    "data": Object {
      "description": "a description 2",
      "id": "some-id-2",
      "list": Array [],
      "title": "some list 2",
      "type": "CUSTOM_LIST",
    },
    "links": Object {
      "self": "/v1/lists/some-id-2",
    },
  },
]
`;

exports[`listReducer get lists by type 1`] = `
Array [
  Object {
    "data": Object {
      "description": "",
      "id": "some-id-1",
      "list": Array [],
      "title": "some list 1",
      "type": "CUSTOM_LIST",
    },
    "links": Object {
      "self": "/v1/lists/some-id-1",
    },
  },
  Object {
    "data": Object {
      "description": "",
      "id": "some-id-3",
      "list": Array [],
      "title": "some list 3",
      "type": "CUSTOM_LIST",
    },
    "links": Object {
      "self": "/v1/lists/some-id-3",
    },
  },
]
`;

exports[`listReducer insert element at specific pos in list 1`] = `
Array [
  Object {
    "data": Object {
      "description": "",
      "id": "some-id-1",
      "list": Array [
        Object {
          "book": Object {
            "pid": "pid1",
          },
        },
        Object {
          "book": Object {
            "pid": "pid3",
          },
        },
        Object {
          "book": Object {
            "pid": "pid2",
          },
        },
      ],
      "title": "some list 1",
      "type": "CUSTOM_LIST",
    },
    "links": Object {
      "self": "/v1/lists/some-id-1",
    },
  },
]
`;

exports[`listReducer remove element from list 1`] = `
Array [
  Object {
    "data": Object {
      "description": "",
      "id": "some-id-1",
      "list": Array [
        Object {
          "book": Object {
            "pid": "pid2",
          },
        },
      ],
      "title": "some list 1",
      "type": "CUSTOM_LIST",
    },
    "links": Object {
      "self": "/v1/lists/some-id-1",
    },
  },
]
`;

exports[`listReducer remove list 1`] = `
Array [
  Object {
    "data": Object {
      "description": "",
      "id": "some-id-2",
      "list": Array [],
      "title": "some list 2",
      "type": "CUSTOM_LIST",
    },
    "links": Object {
      "self": "/v1/lists/some-id-2",
    },
  },
]
`;

exports[`listReducer toggle element in list 1`] = `
Array [
  Object {
    "data": Object {
      "description": "",
      "id": "some-id-1",
      "list": Array [
        Object {
          "book": Object {
            "pid": "pid1",
          },
        },
      ],
      "title": "some list 1",
      "type": "CUSTOM_LIST",
    },
    "links": Object {
      "self": "/v1/lists/some-id-1",
    },
  },
]
`;

exports[`listReducer toggle element in list 2`] = `
Array [
  Object {
    "data": Object {
      "description": "",
      "id": "some-id-1",
      "list": Array [],
      "title": "some list 1",
      "type": "CUSTOM_LIST",
    },
    "links": Object {
      "self": "/v1/lists/some-id-1",
    },
  },
]
`;
